@@ -1,5 +1,9 @@
 2007-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/xwd.c (XWD_OVERFLOW): Eliminate check to see if
+	unsigned type is less than zero.
+	* coders/pnm.c (ValidateScalingIndex): Eliminate check to see if
+	unsigned type is less than zero.
 	* magick/log.c (LogMagickEvent): Even though log file name comes
 	from a controlled source (log.mgk), perform safe numeric
 	substitution on it.
